# stella

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  mkdocs.yml  pyproject.toml  requirements-jax.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  docs-page.yml  docs.yml  stella-tests.yml
docs/: api.md  conf.py  index.md  index.rst
docs/getting_started/: about.md  backends.md  backends.rst  installation.md  installation.rst  other_features.ipynb  other_features.ipynb.bak  other_features.md  pipeline.md  pipeline.rst  shortest_demo.ipynb  shortest_demo.md  tutorial.ipynb  tutorial.ipynb.bak  tutorial.md
mastDownload/TESS/tess2019169103026-s0013-0000000062124646-0146-s/: tess2019169103026-s0013-0000000062124646-0146-s_lc.fits
notebooks/: jax_keras.ipynb
scripts/: convert_h5_to_keras.py  update_notebooks.py  validate_converted_models.py
stella/: __init__.py  backends.py  download_nn_set.py  mark_flares.py  metrics.py  models.py  neural_network.py  pipeline.py  preprocessing_flares.py  rotations.py  utils.py  visualize.py
stella.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
stella/data/: ensemble_s0004_i0350_b0.73_savedmodel.keras  ensemble_s0005_i0350_b0.73_savedmodel.keras  ensemble_s0018_i0350_b0.73_savedmodel.keras  ensemble_s0028_i0350_b0.73_savedmodel.keras  ensemble_s0029_i0350_b0.73_savedmodel.keras  ensemble_s0038_i0350_b0.73_savedmodel.keras  ensemble_s0050_i0350_b0.73_savedmodel.keras  ensemble_s0077_i0350_b0.73_savedmodel.keras  ensemble_s0078_i0350_b0.73_savedmodel.keras  ensemble_s0080_i0350_b0.73_savedmodel.keras
stella/tests/: conftest.py  test_backends.py  test_mark_flares.py  test_neural_network.py  test_processing.py  test_rotation.py  test_swap_backend.py  test_training_guards.py
